apps/examples/p2-native-oidc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p2-oidc-debugger
  namespace: scrap-examples
spec:
  selector:
    app: p2-oidc-debugger
  ports:
    - name: http
      port: 80
      targetPort: http
