apps/examples/p2-native-oidc/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: p2-oidc-debugger
  namespace: scrap-examples
spec:
  parentRefs:
    - name: scrap-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "p2.${BASE_DOMAIN}"
  rules:
    - backendRefs:
        - name: p2-oidc-debugger
          port: 80
